<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Find My Device</string>
    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit</string>
    <string name="signup">Register</string>
    <string name="signin">Sign In</string>
    <string name="hostname">Server IP</string>
    <string name="save">Save</string>
    <string name="server_connection">Server Connection</string>
    <string name="connection_status">Connection Status</string>
    <string name="connect">Connect To Server</string>
    <string name="hostname_input">Enter Host Name</string>
    <string name="signin_input">Enter Email or Username</string>
    <string name="username">Enter Username</string>
    <string name="name">Enter Name</string>
    <string name="mobile">Enter Mobile Number</string>
    <string name="email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="password_confirmation">Confirm Password</string>
    <string name="dont_have_account">Do not have an account ?</string>
    <string name="login_success">Sign In Successfully</string>
    <string name="fail_success">Sign In failed, try again</string>
    <string name="welcome">Welcome..</string>
    <string name="devise_name">Enter Device Name</string>
    <string name="devise_password">Enter Device Password</string>
    <string name="devise_repassword">Confirm Device Password</string>
    <string name="add_devise">Add This Device</string>
    <string name="back_to_home">Back To Home</string>
    <string name="logout">Logout</string> 
    <string name="show_location">Show Device Location</string>
    <string name="location">Your Devices</string>
    <string name="no_devcises">No Devices Found</string>
    <string name="no_locations">No Locations Found</string>
    <string name="location_loc">Device Loc History</string>  
    <string name="showlocation"> View Your Devices Locations</string>  
    
    <string name="GPSAlertDialogTitle">GPS is setting</string>
    <string name="GPSAlertDialogMessage">GPS is not enabled. Do you want to go to setting menu</string>
    <string name="cancel">Cancel</string>
    <string name="latitude">Latitude : </string>
    <string name="longitude">Longitude : </string>
    <string name="country">Country : </string>
    <string name="city">City : </string>
    <string name="postalCode">Postal Code : </string>
    <string name="addressLine">Address Line : </string>

</resources>