<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:text="@string/signin"
            android:textSize="25sp"
            android:gravity="center"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/logininput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signin_input" />

        <EditText
            android:id="@+id/loginpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="@string/password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/login_error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:textColor="#e30000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signinbtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#ff6347"
            android:text="@string/signin"
            android:textColor="#fff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signupbtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="#3399FF"
            android:text="@string/dont_have_account"
            android:textColor="#fff"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>