<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dip"
            android:text="@string/add_devise"
            android:textSize="25sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/devise_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/devise_name" />

        <EditText
            android:id="@+id/devise_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:hint="@string/devise_password"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/device_error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:textColor="#e30000"
            android:textStyle="bold" />

        <Button
            android:id="@+id/add_devise"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="#ff6347"
            android:text="@string/add_devise"
            android:textColor="#fff"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>